# notes-maintainer

./: .gitignore  README.md  config.example.json  pyproject.toml
docs/: linking-guide.md  quickstart-5min.md  user-guide.md
lk_agent/: __init__.py
lk_agent/actions/: __init__.py  capture.py  digest.py
lk_agent/agents/: __init__.py  manager.py  memory.py  triage.py
lk_agent/cli/: main.py
lk_agent/core/: config.py  db.py  models.py  secrets.py
lk_agent/integrations/: __init__.py  runtime.py  scheduler.py  telegram_bot.py
lk_agent/llm/: __init__.py  ollama.py
lk_agent/vault/: __init__.py  index.py  parser.py  storage.py
tests/: test_agents_and_scheduler.py  test_helpers.py  test_parser.py  test_runtime_and_ingestion.py  test_search_and_telegram.py  test_triage_rules.py
